Mudanças feitas e finalização de algumas features

--- a/src/assets/default.scss
+++ b/src/assets/default.scss
@@ -1,8 +1,9 @@
-body,html {
- margin: 0px;
- padding: 0px;
- height: 100%;
- width: 100%;
- font-family: arial;
-
+body,
+html {
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+  font-family: arial;
 }
+
